Lilly-independent variant
Signed-off-by: the-limerent <florian.sihler@uni-ulm.de>

--- a/docs/listings/lstexample.tex
+++ b/docs/listings/lstexample.tex
@@ -1,7 +1,7 @@
 \documentclass{article} % Wir schreiben ein Übungsblatt
 
-\usepackage[utf8x]{inputenc} % Damit die Dateikodierung egal ist
 \usepackage[T1]{fontenc} % Kodierung des Texts
+\usepackage[utf8]{inputenc} % Damit die Dateikodierung egal ist
 
 \usepackage[ngerman]{babel} % ngerman = new german = neue deutsche Rechtschreibung. Wortrennungen und so
 
