--- a/latexbasics-setup.tex
+++ b/latexbasics-setup.tex
@@ -25,6 +25,8 @@
 \def\getSopraPackage#1{\usepackage{./sopra-collection/#1/#1}}
 \getSopraPackage{sopra-listings}
 
+\renewcommand{\solLanguageSearchPath}{{./sopra-collection/sopra-listings/Languages/}}
+
 \solLoadLanguage{bash,latex}
 
 \def\tduck{\tikz[scale=0.15]{\duck}}
@@ -181,5 +183,6 @@
 \newcommand{\lstshowcmd}[2][]{\edef\@tmp@@b{\noexpand\lstinline[#1]!#2!}\@tmp@@b}
 
 \def\i{\texttt{i}}
+
 
 \makeatother
