Added comment to itemize
Signed-off-by: the-limerent <florian.sihler@uni-ulm.de>

--- a/latexbasics.tex
+++ b/latexbasics.tex
@@ -337,7 +337,7 @@ Vertikale Linien können in den Spalten mit einem \T{|} (senkrechten Strich) ang
 
 \cmdidx{item}Man kennt sie, sie sind fast überall: Listen (Schreckens-Musik-Einspieler \Laughey). \LaTeX{} unterscheidet drei Arten von Listen (die ich hier innerhalb einer beschrifteten Liste vorstelle):
 \begin{description}
-    \item[Unsortierte Listen:] \index{itemize@\blatex{itemize}}Diese erzeugen wir mittels der \blatex{itemize}-Umgebung:
+    \item[Unsortierte Listen:] \index{itemize@\blatex{itemize}}Diese erzeugen wir mittels der \blatex{itemize}-Umgebung\footnote{Die unsortierten Listen habe ich in diesem Dokument \emph{stark} modifiziert, sie weichen deswegen vom \say{normalen} aussehen ab.}:
     \begin{defaultlst}[][listing side text,righthand width=6.5cm, before lower={\vspace*{-0.75\baselineskip}}]{lLatex}
 \begin{itemize}
   \item Ich bin ein Punkt
